debug: Add RAGAS sequence validation to identify conversion issues

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -2029,7 +2029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -2038,37 +2038,112 @@
           "text": [
             "📊 Evaluating Tool Call Accuracy...\n",
             "🔍 Got 24 dictionary messages from API\n",
-            "✅ Added tool call pair: search_regulatory_documents → call_search_regulatory_documents_0\n",
-            "✅ Added tool call pair: search_web_intelligence → call_search_web_intelligence_2\n",
-            "✅ Added tool call pair: calculate_transaction_risk → call_calculate_transaction_risk_0\n",
-            "✅ Added tool call pair: get_exchange_rate_data → call_get_exchange_rate_data_2\n",
-            "✅ Added tool call pair: search_web_intelligence → call_search_web_intelligence_4\n",
-            "✅ Added tool call pair: check_compliance_requirements → call_check_compliance_requirements_0\n",
-            "✅ Added tool call pair: search_regulatory_documents → call_search_regulatory_documents_2\n",
-            "🔍 Filtered 24 → 14 messages for RAGAS validation\n",
-            "✅ Converted to 14 LangChain message objects\n",
+            "✅ Added HumanMessage: Investigate this transaction:\n",
+            "            \n",
+            "       ...\n",
+            "✅ Added HumanMessage: Routing investigation to regulatory_research agent...\n",
+            "✅ Added tool call pair: search_regulatory_documents\n",
+            "✅ Added tool call pair: search_web_intelligence\n",
+            "✅ Added HumanMessage: **REGULATORY ANALYSIS REPORT**\n",
+            "\n",
+            "**Jurisdiction Ass...\n",
+            "✅ Added HumanMessage: Routing investigation to evidence_collection agent...\n",
+            "✅ Added tool call pair: calculate_transaction_risk\n",
+            "✅ Added tool call pair: get_exchange_rate_data\n",
+            "✅ Added tool call pair: search_web_intelligence\n",
+            "✅ Added HumanMessage: **EVIDENCE COLLECTION REPORT**\n",
+            "\n",
+            "**Risk Score Analy...\n",
+            "✅ Added HumanMessage: Routing investigation to compliance_check agent fo...\n",
+            "✅ Added tool call pair: check_compliance_requirements\n",
+            "✅ Added tool call pair: search_regulatory_documents\n",
+            "✅ Added HumanMessage: **COMPLIANCE ASSESSMENT REPORT**\n",
+            "\n",
+            "**Filing Obligat...\n",
+            "✅ Added HumanMessage: Routing investigation to report_generation agent f...\n",
+            "✅ Added HumanMessage: **EXECUTIVE SUMMARY**\n",
+            "- **Transaction Overview:** ...\n",
+            "✅ Added HumanMessage: Investigation completed. All specialist agents hav...\n",
+            "🔍 Processed 24 → 24 messages for RAGAS\n",
+            "✅ Converted to 24 LangChain message objects\n",
             "🛠️  Found 7 AIMessages with tool calls and 7 ToolMessages\n",
             "\n",
             "🔍 Message sequence validation:\n",
-            "  0: AIMessage with tool_calls ['call_search_regulatory_documents_0']\n",
-            "  1: ToolMessage with tool_call_id 'call_search_regulatory_documents_0'\n",
-            "  2: AIMessage with tool_calls ['call_search_web_intelligence_2']\n",
-            "  3: ToolMessage with tool_call_id 'call_search_web_intelligence_2'\n",
-            "  4: AIMessage with tool_calls ['call_calculate_transaction_risk_0']\n",
-            "  5: ToolMessage with tool_call_id 'call_calculate_transaction_risk_0'\n",
-            "  6: AIMessage with tool_calls ['call_get_exchange_rate_data_2']\n",
-            "  7: ToolMessage with tool_call_id 'call_get_exchange_rate_data_2'\n",
-            "  8: AIMessage with tool_calls ['call_search_web_intelligence_4']\n",
-            "  9: ToolMessage with tool_call_id 'call_search_web_intelligence_4'\n",
+            "  0: HumanMessage\n",
+            "  1: HumanMessage\n",
+            "  2: AIMessage with tool_calls ['call_search_regulatory_documents_0']\n",
+            "  3: ToolMessage with tool_call_id 'call_search_regulatory_documents_0'\n",
+            "  4: AIMessage with tool_calls ['call_search_web_intelligence_2']\n",
+            "  5: ToolMessage with tool_call_id 'call_search_web_intelligence_2'\n",
+            "  6: HumanMessage\n",
+            "  7: HumanMessage\n",
+            "  8: AIMessage with tool_calls ['call_calculate_transaction_risk_0']\n",
+            "  9: ToolMessage with tool_call_id 'call_calculate_transaction_risk_0'\n",
             "...\n",
-            "✅ Successfully converted to 14 RAGAS messages\n",
+            "✅ Successfully converted to 24 RAGAS messages\n",
+            "\n",
+            "🔍 DETAILED RAGAS SEQUENCE VALIDATION:\n",
+            "  0: HumanMessage - Investigate this transaction:\n",
+            "            \n",
+            "       ...\n",
+            "  1: HumanMessage - Routing investigation to regulatory_research agent...\n",
+            "  2: AIMessage - I need to use the search_regulatory_documents tool...\n",
+            "  3: ToolMessage - 1. FFIEC_BSAAML_Manual_-_Customer_Due_Diligence.pd...\n",
+            "    ❌ VIOLATION: ToolMessage at 3 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (2): AIMessage has_tool_calls=None\n",
+            "  4: AIMessage - I need to use the search_web_intelligence tool to ...\n",
+            "  5: ToolMessage - 1. Recent Actions | Office of Foreign Assets Contr...\n",
+            "    ❌ VIOLATION: ToolMessage at 5 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (4): AIMessage has_tool_calls=None\n",
+            "  6: HumanMessage - **REGULATORY ANALYSIS REPORT**\n",
+            "\n",
+            "**Jurisdiction Ass...\n",
+            "  7: HumanMessage - Routing investigation to evidence_collection agent...\n",
+            "  8: AIMessage - I need to use the calculate_transaction_risk tool ...\n",
+            "  9: ToolMessage - Risk Score: 1.00 (HIGH)\n",
+            "Risk Factors: Moderate amo...\n",
+            "    ❌ VIOLATION: ToolMessage at 9 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (8): AIMessage has_tool_calls=None\n",
+            "  10: AIMessage - I need to use the get_exchange_rate_data tool to i...\n",
+            "  11: ToolMessage - Exchange rate API key not available...\n",
+            "    ❌ VIOLATION: ToolMessage at 11 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (10): AIMessage has_tool_calls=None\n",
+            "  12: AIMessage - I need to use the search_web_intelligence tool to ...\n",
+            "  13: ToolMessage - 1. Global Trading - Overview, News & Similar compa...\n",
+            "    ❌ VIOLATION: ToolMessage at 13 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (12): AIMessage has_tool_calls=None\n",
+            "  14: HumanMessage - **EVIDENCE COLLECTION REPORT**\n",
+            "\n",
+            "**Risk Score Analy...\n",
+            "  15: HumanMessage - Routing investigation to compliance_check agent fo...\n",
+            "  16: AIMessage - I need to use the check_compliance_requirements to...\n",
+            "  17: ToolMessage - Compliance Requirements:\n",
+            "• CTR (Currency Transacti...\n",
+            "    ❌ VIOLATION: ToolMessage at 17 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (16): AIMessage has_tool_calls=None\n",
+            "  18: AIMessage - I need to use the search_regulatory_documents tool...\n",
+            "  19: ToolMessage - 1. FFIEC_BSAAML_Manual_-_Customer_Due_Diligence.pd...\n",
+            "    ❌ VIOLATION: ToolMessage at 19 not preceded by AIMessage with tool_calls\n",
+            "    Previous message (18): AIMessage has_tool_calls=None\n",
+            "  20: HumanMessage - **COMPLIANCE ASSESSMENT REPORT**\n",
+            "\n",
+            "**Filing Obligat...\n",
+            "  21: HumanMessage - Routing investigation to report_generation agent f...\n",
+            "  22: HumanMessage - **EXECUTIVE SUMMARY**\n",
+            "- **Transaction Overview:** ...\n",
+            "  23: HumanMessage - Investigation completed. All specialist agents hav...\n",
+            "❌ MultiTurnSample creation failed: 1 validation error for MultiTurnSample\n",
+            "user_input\n",
+            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[HumanMessage(content='In...ata=None, type='human')], input_type=list]\n",
+            "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n",
+            "🔍 This is the validation error - checking if it's ONE record or ALL records...\n",
             "❌ Error in Tool Call Accuracy evaluation: 1 validation error for MultiTurnSample\n",
             "user_input\n",
-            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[AIMessage(content='I nee...data=None, type='tool')], input_type=list]\n",
+            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[HumanMessage(content='In...ata=None, type='human')], input_type=list]\n",
             "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n",
             "🔍 Error details: 1 validation error for MultiTurnSample\n",
             "user_input\n",
-            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[AIMessage(content='I nee...data=None, type='tool')], input_type=list]\n",
+            "  Value error, ToolMessage must follow an AIMessage where tools were called. [type=value_error, input_value=[HumanMessage(content='In...ata=None, type='human')], input_type=list]\n",
             "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n",
             "📋 First dict message type: HumanMessage\n",
             "💡 Check message conversion logic\n"
@@ -2084,8 +2159,8 @@
         "from langchain_core.messages import AIMessage, ToolMessage, HumanMessage\n",
         "\n",
         "def convert_dict_to_langchain_messages(dict_messages):\n",
-        "    \"\"\"Convert serialized dictionary messages to LangChain objects for RAGAS validation\"\"\"\n",
-        "    # First pass: convert all messages\n",
+        "    \"\"\"Convert serialized dictionary messages to LangChain objects with RAGAS-compliant sequencing\"\"\"\n",
+        "    # Convert all messages to LangChain format\n",
         "    all_messages = []\n",
         "    for msg_dict in dict_messages:\n",
         "        msg_type = msg_dict.get(\"type\", \"\")\n",
@@ -2118,37 +2193,49 @@
         "            human_msg = HumanMessage(content=content, name=name)\n",
         "            all_messages.append(human_msg)\n",
         "    \n",
-        "    # Second pass: Extract only valid tool call sequences for RAGAS\n",
-        "    # RAGAS requires: AIMessage(with tool_calls) → ToolMessage pairs\n",
+        "    # Validate sequence and fix any violations\n",
+        "    # RAGAS rule: ToolMessage must immediately follow AIMessage with tool_calls\n",
         "    valid_messages = []\n",
         "    i = 0\n",
         "    \n",
         "    while i < len(all_messages):\n",
         "        msg = all_messages[i]\n",
         "        \n",
-        "        # Look for AIMessage with tool_calls\n",
-        "        if (isinstance(msg, AIMessage) and \n",
-        "            hasattr(msg, 'tool_calls') and \n",
-        "            msg.tool_calls and \n",
-        "            len(msg.tool_calls) > 0):\n",
+        "        if isinstance(msg, HumanMessage):\n",
+        "            # Always include HumanMessages (conversation starters)\n",
+        "            valid_messages.append(msg)\n",
+        "            print(f\"✅ Added HumanMessage: {msg.content[:50]}...\")\n",
+        "            i += 1\n",
         "            \n",
-        "            # Check if next message is the corresponding ToolMessage\n",
-        "            if (i + 1 < len(all_messages) and \n",
-        "                isinstance(all_messages[i + 1], ToolMessage)):\n",
-        "                \n",
-        "                # Add the AIMessage → ToolMessage pair\n",
-        "                valid_messages.append(msg)\n",
-        "                valid_messages.append(all_messages[i + 1])\n",
-        "                print(f\"✅ Added tool call pair: {msg.tool_calls[0].get('name')} → {all_messages[i + 1].tool_call_id}\")\n",
-        "                i += 2  # Skip both messages\n",
+        "        elif isinstance(msg, AIMessage):\n",
+        "            if hasattr(msg, 'tool_calls') and msg.tool_calls:\n",
+        "                # AIMessage with tool calls - must be followed by ToolMessage\n",
+        "                if (i + 1 < len(all_messages) and \n",
+        "                    isinstance(all_messages[i + 1], ToolMessage)):\n",
+        "                    # Valid sequence: add both\n",
+        "                    valid_messages.append(msg)\n",
+        "                    valid_messages.append(all_messages[i + 1])\n",
+        "                    print(f\"✅ Added tool call pair: {msg.tool_calls[0].get('name')}\")\n",
+        "                    i += 2\n",
+        "                else:\n",
+        "                    # Invalid: AIMessage with tool_calls not followed by ToolMessage\n",
+        "                    print(f\"⚠️  Skipping invalid sequence: AIMessage with tool_calls not followed by ToolMessage\")\n",
+        "                    i += 1\n",
         "            else:\n",
-        "                print(f\"⚠️  Skipping AIMessage with tool_calls (no following ToolMessage)\")\n",
+        "                # AIMessage without tool calls (final responses)\n",
+        "                valid_messages.append(msg)\n",
+        "                print(f\"✅ Added AIMessage response: {msg.content[:50]}...\")\n",
         "                i += 1\n",
+        "                \n",
+        "        elif isinstance(msg, ToolMessage):\n",
+        "            # ToolMessage should only appear after AIMessage with tool_calls\n",
+        "            # If we reach here, it means this ToolMessage is orphaned\n",
+        "            print(f\"⚠️  Skipping orphaned ToolMessage: {msg.content[:50]}...\")\n",
+        "            i += 1\n",
         "        else:\n",
-        "            # Skip non-tool-call messages for RAGAS validation\n",
         "            i += 1\n",
         "    \n",
-        "    print(f\"🔍 Filtered {len(all_messages)} → {len(valid_messages)} messages for RAGAS validation\")\n",
+        "    print(f\"🔍 Processed {len(all_messages)} → {len(valid_messages)} messages for RAGAS\")\n",
         "    return valid_messages\n",
         "\n",
         "if agent_results and agent_results[0]:\n",
@@ -2184,15 +2271,45 @@
         "        ragas_trace = convert_to_ragas_messages(langchain_messages)\n",
         "        print(f\"✅ Successfully converted to {len(ragas_trace)} RAGAS messages\")\n",
         "        \n",
-        "        # Create sample with reference tool calls for InvestigatorAI fraud investigation\n",
-        "        sample = MultiTurnSample(\n",
-        "            user_input=ragas_trace,\n",
-        "            reference_tool_calls=[\n",
-        "                r.ToolCall(name=\"search_regulatory_documents\", args={\"query\": \"Iran sanctions compliance\"}),\n",
-        "                r.ToolCall(name=\"calculate_transaction_risk\", args={\"amount\": 75000.0, \"country_to\": \"Iran\"}),\n",
-        "                r.ToolCall(name=\"check_compliance_requirements\", args={\"amount\": 75000.0, \"risk_score\": 1.0})\n",
-        "            ],\n",
-        "        )\n",
+        "        # DEBUG: Check the exact RAGAS sequence before creating MultiTurnSample\n",
+        "        print(f\"\\n🔍 DETAILED RAGAS SEQUENCE VALIDATION:\")\n",
+        "        for i, msg in enumerate(ragas_trace):\n",
+        "            msg_type = type(msg).__name__\n",
+        "            content_preview = getattr(msg, 'content', '')[:50] + '...' if hasattr(msg, 'content') else 'No content'\n",
+        "            \n",
+        "            if hasattr(msg, 'tool_calls') and getattr(msg, 'tool_calls', None):\n",
+        "                tool_names = [tc.get('name', 'unknown') for tc in msg.tool_calls]\n",
+        "                print(f\"  {i}: {msg_type} with tool_calls {tool_names}\")\n",
+        "            elif hasattr(msg, 'tool_call_id') and getattr(msg, 'tool_call_id', None):\n",
+        "                print(f\"  {i}: {msg_type} with tool_call_id '{msg.tool_call_id}'\")\n",
+        "            else:\n",
+        "                print(f\"  {i}: {msg_type} - {content_preview}\")\n",
+        "                \n",
+        "            # Check RAGAS rule: ToolMessage must follow AIMessage with tool_calls\n",
+        "            if msg_type == \"ToolMessage\" and i > 0:\n",
+        "                prev_msg = ragas_trace[i-1]\n",
+        "                prev_type = type(prev_msg).__name__\n",
+        "                has_tool_calls = (hasattr(prev_msg, 'tool_calls') and \n",
+        "                                getattr(prev_msg, 'tool_calls', None))\n",
+        "                if prev_type != \"AIMessage\" or not has_tool_calls:\n",
+        "                    print(f\"    ❌ VIOLATION: ToolMessage at {i} not preceded by AIMessage with tool_calls\")\n",
+        "                    print(f\"    Previous message ({i-1}): {prev_type} has_tool_calls={has_tool_calls}\")\n",
+        "        \n",
+        "        # Try creating MultiTurnSample with detailed error handling\n",
+        "        try:\n",
+        "            sample = MultiTurnSample(\n",
+        "                user_input=ragas_trace,\n",
+        "                reference_tool_calls=[\n",
+        "                    r.ToolCall(name=\"search_regulatory_documents\", args={\"query\": \"Iran sanctions compliance\"}),\n",
+        "                    r.ToolCall(name=\"calculate_transaction_risk\", args={\"amount\": 75000.0, \"country_to\": \"Iran\"}),\n",
+        "                    r.ToolCall(name=\"check_compliance_requirements\", args={\"amount\": 75000.0, \"risk_score\": 1.0})\n",
+        "                ],\n",
+        "            )\n",
+        "            print(f\"✅ MultiTurnSample created successfully\")\n",
+        "        except Exception as sample_error:\n",
+        "            print(f\"❌ MultiTurnSample creation failed: {sample_error}\")\n",
+        "            print(f\"🔍 This is the validation error - checking if it's ONE record or ALL records...\")\n",
+        "            raise sample_error  # Re-raise to see the full error\n",
         "        \n",
         "        tool_accuracy_scorer = ToolCallAccuracy()\n",
         "        tool_accuracy_scorer.llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
@@ -2211,7 +2328,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -2223,7 +2340,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -2283,7 +2400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
